<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".homePage_Activity">
    <ImageView
        android:id="@+id/stores"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/store" />

    <TextView
        android:id="@+id/storename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/stores"
        android:layout_centerHorizontal="true"
        android:text="Walmart"
        android:textColor="@color/white"
        android:textSize="20sp" />



        <LinearLayout
            android:layout_marginTop="140dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <GridLayout
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="2">

                <LinearLayout
                    android:id="@+id/mtr"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    android:background="@drawable/shape"
                    android:elevation="6dp"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/mtr" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/m1"
                            android:gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mtg"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    android:elevation="6dp"
                    android:background="@drawable/shape"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/mtg" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/m2"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/stats"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    android:elevation="6dp"
                    android:background="@drawable/shape"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/stat" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/stats"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/blog"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="12dp"
                    android:background="@drawable/shape">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/blog" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/blog"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>
                </LinearLayout>

            </GridLayout>

        </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        app:srcCompat="@drawable/add_white" />
</RelativeLayout>




